modificaciones de direccion de imagenes

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 
 .banner {
     height: 100vh;
-    background: url('/src/background4.gif') center/cover no-repeat;
+    background: url('../src/background4.gif') center/cover no-repeat;
     position: relative;
     color: #fff;
     text-align: center;
@@ -22,7 +22,7 @@ body {
 
 .banner_contact {
     height: 100vh;
-    background: url('/src/background3.gif') center/cover no-repeat;
+    background: url('../src/background3.gif') center/cover no-repeat;
     position: relative;
     color: #fff;
     text-align: center;
